feat: Added All Resources Endpoints
